2005-03-02  Jackson Harper  <jackson@ximian.com>

	* EventDescriptorCollection.cs: Handle null in the constructor properly.

2005-02-12  Geoff Norton  <gnorton@customerdna.com>

	* CharConverter.cs: Implement the ability to convert from "".
	
2005-02-10  Geoff Norton  <gnorton@customerdna.com>

	* CultureInfoConverter.cs: Implement converting from the 
	string "(default)" that MS will put in .resx files.

2005-02-10  Lluis Sanchez Gual  <lluis@novell.com>

	* BindableAttribute.cs: Implemented 2.0 api.

2005-02-05 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* TypeDescriptor.cs: fixed bug #71601.  GetConverter should handle
	TypeConverter derived classes that take a Type argument.

2005-01-27  LLuis Sanchez Gual  <lluis@novell.com>

	* DateTimeConverter.cs, CultureInfoConverter.cs, DecimalConverter.cs,
	TimeSpanConverter.cs, GuidConverter.cs, EnumConverter.cs: 
	Implemented support for InstanceDescriptor.

2005-01-25  LLuis Sanchez Gual  <lluis@novell.com>

	* Win32Exception.cs: Set the correct name for the serialized
	NativeErrorCode. This fixes bug #71572. Fix by Aleksandar Dezelin.

2005-01-24 Joerg Rosenkranz <joergr@voelcker.com>

	* TypeDescriptor.cs: Changed handling of interfaces and objects in
	GetConverter to reflect the behaviour of .NET. This fixes bug #71444.
    
2005-01-19  Jonathan Pryor  <jonpryor@vt.edu>

	* TypeDescriptor.cs: Fix Info.GetDefaultEvent() so that it filters events
	  properly.  This matches .NET 1.1 and fixes a test case.

2005-01-19  Jonathan Pryor  <jonpryor@vt.edu>

	* TypeDescriptor.cs: Fix GetComponentName() so that it returns the type
	  name if no Site is present.  This matches .NET 1.1 and fixes a test case.

2005-01-12 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* BaseNumberConverter.cs: when the culture we get is null, set it to the
	default. Fixes bug #67033. Thanks to Sander Rijken.

2005-01-10  LLuis Sanchez Gual  <lluis@novell.com>

	* BindingDirection.cs: New enum.

2004-12-09  Dick Porter  <dick@ximian.com>
